# PDF-MCP-Server

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  server.json
.github/workflows/: ci.yml  release.yml
benches/: pdf_benchmark.rs
npm/: package.json
src/: error.rs  lib.rs  main.rs  server.rs
src/pdf/: mod.rs  qpdf.rs  reader.rs
src/source/: cache.rs  mod.rs  resolver.rs
tests/: integration_test.rs
tests/fixtures/: README.md  create_test_pdf.py
